deploy/k8s/staging/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-account-http-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-account-http-service
  template:
    metadata:
      labels:
        app: gau-account-http-service
    spec:
      containers:
        - name: gau-account-http-service
          image: iamqbao/gau_account_service:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-account-consumer-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-account-consumer-service
  template:
    metadata:
      labels:
        app: gau-account-consumer-service
    spec:
      containers:
        - name: gau-account-consumer-service
          image: iamqbao/gau_account_service:latest
          imagePullPolicy: Always
          args: ["consumer"]
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: redis-account-deployment
#  namespace: bao-${DEPLOY_ENV}-env
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: redis-account-service
#  template:
#    metadata:
#      labels:
#        app: redis-account-service
#    spec:
#      containers:
#        - name: redis-account-service
#          envFrom:
#            - configMapRef:
#                name: gau-account-${DEPLOY_ENV}-config
#            - secretRef:
#                name: gau-account-${DEPLOY_ENV}-secret
#          image: redis:7.2-alpine
#          resources:
#            requests:
#              cpu: "0.2"
#              memory: "128Mi"
#            limits:
#              cpu: "0.5"
#              memory: "256Mi"
